# mitosis

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  todo
.github/workflows/: main.yaml  release.yaml
docs/source/: conf.py  index.rst
mitosis/: __init__.py  __main__.py  _db.py  _disk.py  _strings.py  _typing.py
mitosis/tests/: bad_return_experiment.py  mock_experiment.py  mock_legacy.py  mock_paper.py  mock_part1.py  mock_part2.py  pyproject_malformed.toml  pyproject_missing.toml  test_all.py  test_cli.py  test_pyproject.toml
tests/: test_all.py
