[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mitosis"
dynamic = ["version"]
description = "Reproduce Machine Learning experiments easily"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["Machine Learning", "Science", "Mathematics", "Experiments"]
authors = [
  {email = "jacob.stevens.haas@gmail.com", name = "Jake Stevens-Haas"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Framework :: Jupyter",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: SQL",
  "Topic :: Documentation",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Text Processing :: Markup",
]
dependencies = [
  "dill",
  "GitPython",
  "importlib_metadata",
  "ipykernel",
  "matplotlib",
  "nbconvert",
  "nbclient",
  "nbformat",
  "pandas<2.2",
  "sqlalchemy",
  "toml",
  "types-toml",
]

[project.optional-dependencies]
dev = [
  "pytest >=6.0.0,<8.0.0",
  "pytest-cov",
  "flake8",
  "flake8-comprehensions>=3.1.0",
  "black",
  "coverage",
  "mypy",
  "pandas-stubs",
  "pre-commit",
  "pytest-lazy-fixture",
  "sphinx",
  "codecov"
]

[project.urls]
homepage = "https://github.com/Jacob-Stevens-Haas/mitosis"

[project.scripts]
mitosis="mitosis.__main__:main"

[tool.setuptools]
packages = ["mitosis"]

[tool.setuptools_scm]
version_file = "mitosis/_version.py"

[tool.black]
line-length = 88
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | .vscode
  | version.py
  | build
  | dist
  | env
)/
'''

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::RuntimeWarning",
  "ignore::UserWarning",]
addopts = '-m "not clean"'
markers = ["clean"]

[tool.codespell]
ignore-words-list = "raison"
